# Rust_starter_base

./: Cargo.toml
Exercises/: exercise_1.rs  exercise_2.rs  exercise_3.rs  exercise_4.rs
connected_components/: conected_components_changed_hashing.rs  connected_components_faster_algorithm.rs  connected_components_faster_algorithm_using_args.rs  connected_components_fully_optimized_with_capacity.rs  connected_components_incl_early_results_storage.rs  connected_components_incremental_update_function.rs  connected_components_minimal_loops.rs  connected_components_use_union_find.rs  connected_components_using_rutc_hash.rs
csv_get_stats_scripts/: csv_count_sum_mean_distinct_simple_groupby.rs  csv_distinct_counter.rs  csv_get_zscores_from_group_columns_read_multi_threaded.rs  csv_groupby_simple_stats.rs
loops/: custom_iterator.rs  custom_iterator_with_while_loop.rs  for_loop.rs  for_loop_through_custom_iterator.rs  loop_in_range.rs  while_loop.rs
memory_management/: adding_copy_and_clone_traits.rs  linked_list.rs  mutability.rs  str_and_string.rs  vecs_and_memory_occupation.rs
mini_scripts/: connected_components.rs  csv_distinct_counter.rs  csv_distinct_counters_using_match_pattern.rs  csv_get_metadata.rs  csv_get_zscores_from_columns.rs  csv_get_zscores_from_group_columns.rs  csv_get_zscores_from_group_columns_,multi_threaded.rs  csv_get_zscores_from_group_columns_multi_threaded.rs  csv_get_zscores_from_group_columns_single_threaded.rs  csv_groupby_metadata.rs  fill_dict_simple_loop.rs  fill_dict_using_rayon_and_mutex.rs  fill_vector_simple_loop.rs  guessing`_game.rs  (+1 more)
(+39 files in other folders)
