[package]
name = "rust_starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1.6.1"
itertools = "0.10.5"
fnv = "1.0"
flurry = "0.3.1"
csv = "1.1" # for csv project
csv-core = "0.1.9"
rust_decimal = "1.10.0"
rust_decimal_macros = "1.28"
